--- a/pixabay-api/build.gradle
+++ b/pixabay-api/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -33,8 +34,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
 
     api 'com.squareup.retrofit2:retrofit:2.9.0'
-    api 'com.google.code.gson:gson:2.9.0'
-    api 'com.squareup.retrofit2:converter-gson:2.9.0'
+    api 'com.squareup.moshi:moshi:1.13.0'
+    api 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
