--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation project(path: ':pixabay-api')
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation("io.coil-kt:coil:2.0.0-rc03")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.fragment:fragment-ktx:1.4.1"
